# getml-jupyter-widgets

./: .gitignore  README.md  bsconfig.json  getml_jupyter_widgets.json  install.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js  webpack.config.jupyter.js
examples/: cora.ipynb  data_model.ipynb  introduction.ipynb  test.ipynb
getml_jupyter_widgets/: __init__.py  _frontend.py  _version.py  data_model.py  example.py
getml_jupyter_widgets/nbextension/: extension.js
getml_jupyter_widgets/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: DOMWidget.res  Data.bs.js  Data.res  DataModelWidget.bs.js  DataModelWidget.res  ExampleWidget.bs.js  ExampleWidget.res  Plugin.bs.js  Plugin.res  ReactWidget.bs.js  ReactWidget.res  Widget.bs.js  Widget.res  extension.js  index.js  version.js
src/__tests__/: utils.ts
src/bindings/: Visx.bs.js  Visx.res
src/components/: DataModel.bs.js  DataModel.res  Example.bs.js  Example.res  ModelContext.bs.js  ModelContext.res  Tree.bs.js  Tree.res  tree.js
src/hooks/: WidgetModel.bs.js  WidgetModel.res
