[build-system]
requires = [
    "hatchling",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "getml-jupyter-widgets"
description = "Jupyter widgets for getML"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "getML", email = "info@getml.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=4.6",
]

[project.urls]
Homepage = "https://github.com/getml/getml-jupyter-widgets"

[tool.hatch.build.targets.wheel.shared-data]
"getml_jupyter_widgets/nbextension" = "share/jupyter/nbextensions/getml_jupyter_widgets"
"getml_jupyter_widgets/labextension" = "share/jupyter/labextensions/getml-jupyter-widgets"
"./install.json" = "share/jupyter/labextensions/getml-jupyter-widgets/install.json"
"./getml_jupyter_widgets.json" = "etc/jupyter/nbconfig/notebook.d/getml_jupyter_widgets.json"

[tool.hatch.build.targets.sdist]
exclude = []

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "getml_jupyter_widgets/nbextension/index.js",
    "getml_jupyter_widgets/labextension/package.json",
]
skip-if-exists = [
    "getml_jupyter_widgets/nbextension/index.js",
    "getml_jupyter_widgets/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""
